Version 1.1
* simRunContamination
* uses different generation of regressor as Marhuenda - standard normal distr