@@ -1,7 +1,7 @@
 Package: spatioTemporalData
 Type: Package
 Title: Tools for simulating Data with time and spatial structure
-Version: 1.1
+Version: 1.1.1
 Date: 2013-03-25
 Author: Sebastian Warnholz
 Maintainer: Sebastian Warnholz <Sebastian.Warnholz@fu-berlin.de>
