@@ -7,7 +7,7 @@ export(reZ)
 export(reZ1)
 export(seGenerator)
 export(seSigmaClosure)
-export(seSigmaContClosure)
+export(seSigmaClosure1)
 export(simRunContamination)
 export(simRunSetup)
 export(simSetupMarhuenda)
