@@ -16,6 +16,16 @@ seSigmaClosure <- function(nDomains, nTime) {
 #   function(d, t) (alpha1 - alpha0) * (nTime * (d - 1) + t - 1)/(nDomains * nTime) + alpha0
 # }
 
+#' Function for the Sampling Error Part
+#' @export
+seSigmaClosure1 <- function(nDomains, nTime) {
+  # Function for generating variance parameters for sampling error deterministically
+  force(nDomains); force(nTime)
+  function() {
+    set.seed(1)
+    abs(rnorm(nDomains * nTime, 1))
+  }
+}
 
 #' Function for generating Sampling errors with deterministic variance parameter
 #' @export
@@ -28,22 +38,22 @@ seGenerator <- function(nDomains, nTime, n, sigmaFun) {
   do.call(rbind, samplingError)
 }
 
-#' Contaminated SamplingErrors
-#' @export
-seSigmaContClosure <- function(nDomains, nTime, nDomainsCont = 1, contFactor = 2, randomDomains = FALSE) {
-  
-  sigmaGenerated <- seSigmaClosure(nDomains, nTime)()
-  sigmaContaminated <- contaminateSigma(sigmaGenerated, nDomains, nTime, nDomainsCont = nDomainsCont, contFactor = contFactor, randomDomains = randomDomains)
-  
-  function() return(sigmaContaminated)
-}
-
-contaminateSigma <- function(sigmaGenerated, nDomains, nTime, nDomainsCont = 2, contFactor = 2, randomDomains = FALSE) {
-  if (nDomainsCont == 0) 
-    return(sigmaGenerated) else {
-      index <- gl(n=nDomains, k=nTime)
-      selectedDomains <- if(!randomDomains) (nDomains:1)[1:nDomainsCont] else sample(nDomains:1, nDomainsCont)
-      sigmaGenerated[index %in% selectedDomains] <- sigmaGenerated[index %in% selectedDomains] * contFactor
-      return(sigmaGenerated)
-    }
-}
+# #' Contaminated SamplingErrors
+# #' @export
+# seSigmaContClosure <- function(nDomains, nTime, nDomainsCont = 1, contFactor = 2, randomDomains = FALSE) {
+#   
+#   sigmaGenerated <- seSigmaClosure(nDomains, nTime)()
+#   sigmaContaminated <- contaminateSigma(sigmaGenerated, nDomains, nTime, nDomainsCont = nDomainsCont, contFactor = contFactor, randomDomains = randomDomains)
+#   
+#   function() return(sigmaContaminated)
+# }
+# 
+# contaminateSigma <- function(sigmaGenerated, nDomains, nTime, nDomainsCont = 2, contFactor = 2, randomDomains = FALSE) {
+#   if (nDomainsCont == 0) 
+#     return(sigmaGenerated) else {
+#       index <- gl(n=nDomains, k=nTime)
+#       selectedDomains <- if(!randomDomains) (nDomains:1)[1:nDomainsCont] else sample(nDomains:1, nDomainsCont)
+#       sigmaGenerated[index %in% selectedDomains] <- sigmaGenerated[index %in% selectedDomains] * contFactor
+#       return(sigmaGenerated)
+#     }
+# }
