@@ -1,0 +1,10 @@
+\name{seSigmaClosure1}
+\alias{seSigmaClosure1}
+\title{Function for the Sampling Error Part}
+\usage{
+  seSigmaClosure1(nDomains, nTime)
+}
+\description{
+  Function for the Sampling Error Part
+}
+
