@@ -1,3 +1,6 @@
+* uses different generation of sampling errors. Reproducable sequenze of random numbers
+
+
 Version 1.1
 * simRunContamination
 * uses different generation of regressor as Marhuenda - standard normal distr
